--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,28 @@
+.testclass {
+    color: green;
+}
+
 p {
     color: blue;
+    font-family: 'Consolas', monospace;
+    font-size: 16px;
 }
+
+h4 {
+    color: red;
+    font-family: 'Avenir', sans-serif;
+    letter-spacing: 5px;
+}
+
+html {
+    background-color: #00539F;
+}
+
+body {
+    width: 600px;
+    margin: 50px auto;
+    background-color: #FF9500;
+    padding: 200px 20px 20px 20px;
+    border: 5px solid black;
+}
+
