--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ html {
 body {
     width: 600px;
     margin: 50px auto;
-    background-color: #FF9500;
+    background-color: beige;
     padding: 200px 20px 20px 20px;
     border: 5px solid black;
 }
